<resources>
    <string name="app_name">SCMProtoApp</string>
    <string name="textview">TextView</string>
    <string name="choose_your_coffee">Choose Your Coffee</string>
    <string name="create_your_own">Create Your Own</string>
    <string name="ok">OK</string>
    <string name="cappuccino">cappuccino</string>
    <string name="doubleexpresso">doubleExpresso</string>
    <string name="expresso">expresso</string>
    <string name="latte">latte</string>
    <string name="mocha">mocha</string>
    <string name="scroll_to_select_your_coffee">Scroll To Select Your Coffee</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="scm_control_center">SCM Control Center</string>
    <string name="username">Username</string>
    <string name="plus">+</string>
    <string name="sugarAdd">+</string>
    <string name="creamAdd">+</string>
    <string name="milkAdd">+</string>
    <string name="pay">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="your_coffee">Your Coffee</string>
    <string name="coffee_name">Coffee Name</string>
    <string name="ingradients">Ingradients</string>
    <string name="search_on_off">Search On/Off</string>
    <string name="Expresso">Expresso</string>
    <string name="Mocha">Mocha</string>
    <string name="Cappuccino">Cappuccino</string>
    <string name="Turkish">Turkish</string>
    <string name="americano">Americano</string>
    <string name="more_types_coming">More types coming...</string>
    <string name="Latte">Latte</string>
</resources>
